# dkg-admin

./: Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: release.yml
api/: dkg_admin.proto
src/: ceremony.rs  config.rs  crypto.rs  dkg.rs  encrypt.rs  envelope.rs  export.rs  hash.rs  lib.rs  main.rs  service.rs  sign_spendauth.rs  smoke.rs  storage.rs
tests/: e2e_txsign_ext.rs  integration_dkg.rs  integration_sign_spendauth.rs  unit_config.rs  unit_encrypt.rs
