[package]
name = "dkg-admin"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
age = "0.11.2"
anyhow = "1.0.101"
async-trait = "0.1.89"
aws-config = "1.8.13"
aws-sdk-kms = "1.99.0"
aws-sdk-s3 = "1.122.0"
base64 = "0.22.1"
bytes = "1.11.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.57", features = ["derive"] }
hex = "0.4.3"
postcard = { version = "1.1.3", features = ["use-std"] }
prost = "0.14.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
reddsa = { git = "https://github.com/ZcashFoundation/reddsa.git", rev = "155c1803cf4187ee4635377a9cf589a71ae5ebfa", features = ["frost"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "serde"] }
tokio = { version = "1.49.0", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tonic = { version = "0.14.3", default-features = false, features = ["codegen", "tls-connect-info", "tls-ring", "transport"] }
tonic-prost = "0.14.3"
tower = { version = "0.5.3", features = ["limit", "util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.3"
